fix logo spilling out of nav

--- a/css/about.css
+++ b/css/about.css
@@ -155,7 +155,7 @@ header nav {
   justify-content: space-between;
 }
 header nav .navLinks {
-  width: 25%;
+  width: 40%;
   height: 10%;
   display: flex;
   justify-content: space-around;
@@ -179,6 +179,11 @@ header nav .navLinks a {
 header nav .navLogo {
   display: flex;
   justify-content: flex-end;
+}
+@media (max-width: 800px) {
+  header nav .navLogo {
+    width: 20%;
+  }
 }
 @media (max-width: 500px) {
   header nav .navLogo {
@@ -273,6 +278,14 @@ header nav {
 }
 header nav .navLinks {
   height: 50%;
+}
+header nav .navLogo {
+  width: 50%;
+}
+@media (max-width: 800px) {
+  header nav .navLogo {
+    width: 20%;
+  }
 }
 header nav .navLogo img {
   height: 50%;
