--- a/css/index.css
+++ b/css/index.css
@@ -155,7 +155,7 @@ header nav {
   justify-content: space-between;
 }
 header nav .navLinks {
-  width: 25%;
+  width: 40%;
   height: 10%;
   display: flex;
   justify-content: space-around;
@@ -179,6 +179,12 @@ header nav .navLinks a {
 header nav .navLogo {
   display: flex;
   justify-content: flex-end;
+  width: 50%;
+}
+@media (max-width: 800px) {
+  header nav .navLogo {
+    width: 20%;
+  }
 }
 @media (max-width: 500px) {
   header nav .navLogo {
