--- a/less/about-header.less
+++ b/less/about-header.less
@@ -11,6 +11,12 @@ header {
 
         .navLogo {
 
+            width: 50%;
+
+            @media @tablet {
+                width: 20%;
+            }
+
             img {
                 height: 50%;
             }
