--- a/less/landing-header.less
+++ b/less/landing-header.less
@@ -14,7 +14,7 @@ header {
         justify-content: space-between;
         
         .navLinks {
-            width: 25%;
+            width: 40%;
             height: 10%;
             display: flex;
             justify-content: space-around;
@@ -38,6 +38,12 @@ header {
         .navLogo {
             display: flex;
             justify-content: flex-end;
+            width: 50%;
+
+
+            @media @tablet {
+                width: 20%;
+            }
 
             @media @phone {
                 display: none;
